--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -2,7 +2,7 @@
 
 
 
-@using CosmosDB_ChatGPT.Services
+@using cosmosdb_chatgpt.Services
 
 <div class="flex-row justify-content-center" style="min-width:275px">
     <NavMenu @ref="@navmenu" OnChatClicked="LoadChatEventHandler"  />
