--- a/Pages/_Layout.cshtml
+++ b/Pages/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
-@namespace CosmosDB_ChatGPT.Pages
+@namespace cosmosdb_chatgpt.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 <!DOCTYPE html>
@@ -10,7 +10,7 @@
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
-    <link href="CosmosDB-ChatGPT.styles.css" rel="stylesheet" />
+    <link href="cosmosdb-chatgpt.styles.css" rel="stylesheet" />
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
     <script src="js/site.js"></script>
 </head>
