--- a/_Imports.razor
+++ b/_Imports.razor
@@ -6,6 +6,6 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using CosmosDB_ChatGPT
-@using CosmosDB_ChatGPT.Shared
-@using CosmosDB_ChatGPT.Components
+@using cosmosdb_chatgpt
+@using cosmosdb_chatgpt.Shared
+@using cosmosdb_chatgpt.Components
