--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -43,6 +43,7 @@
     {    
         // Inform blazor the UI needs updating
         InvokeAsync(StateHasChanged);
+        navmenu.UpdateNavMenuDisplay("Rename by Open AI");
 
     }
 
