Fixing Sync Issues in Multi User Sessions

--- a/Pages/NavMenu.razor
+++ b/Pages/NavMenu.razor
@@ -23,9 +23,9 @@
                             <span class="oi oi-plus" aria-hidden="true"></span> New Chat
                         </NavLink>
                     </div>
-@*                </nav>
+                </nav>
             </div>
-            <div class="vstack gap-3 px-3" >*@
+            <div class="vstack gap-3 px-3" >
                 
                 @foreach (var session in ChatSessions)
                 {
@@ -49,8 +49,6 @@
                         </div>
                     </div>
                 }
-                </nav>
-            </div>
         </div>
         }
     </div>
