--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "/"
-@namespace cosmosdb_chatgpt.Pages
+@namespace Cosmos.Chat.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     Layout = "_Layout";
