--- a/_Imports.razor
+++ b/_Imports.razor
@@ -6,6 +6,6 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using cosmosdb_chatgpt
-@using cosmosdb_chatgpt.Shared
-@using cosmosdb_chatgpt.Components
+@using Cosmos.Chat
+@using Cosmos.Chat.Shared
+@using Cosmos.Chat.Components
