--- a/_Imports.razor
+++ b/_Imports.razor
@@ -7,5 +7,6 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using Cosmos.Chat
+@using Cosmos.Chat.Models
 @using Cosmos.Chat.Shared
 @using Cosmos.Chat.Components
