Update Bootstrap theme

--- a/Components/Confirmation.razor
+++ b/Components/Confirmation.razor
@@ -1,12 +1,9 @@
-﻿<div class="modal fade show" id="myModal" style="display:block; background-color: rgba(10,10,10,.8);" aria-modal="true" role="dialog">
+﻿<div class="modal fade show d-block bg-dark bg-opacity-75" id="myModal" aria-modal="true" role="dialog">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title">@Caption</h4>
-                <button type="button" class="close"
-                        @onclick="@Cancel">
-                    &times;
-                </button>
+                <h5 class="modal-title">@Caption</h5>
+                <button type="button" class="btn-close" aria-label="Close" @onclick="@Cancel"></button>
             </div>
             <div class="modal-body">
                 <p>@Message</p>
@@ -25,17 +22,17 @@
                         @onclick=@Ok>
                             Save
                         </button>
-                        <button type="button" class="btn btn-warning"
+                        <button type="button" class="btn btn-secondary"
                         @onclick="@Cancel">
                             Don't Save
                         </button>
                         break;
                     case Category.DeleteNot:
-                        <button type="button" class="btn btn-danger"
+                        <button type="button" class="btn btn-primary"
                         @onclick=@Ok>
                             Delete
                         </button>
-                        <button type="button" class="btn btn-warning"
+                        <button type="button" class="btn btn-secondary"
                         @onclick="@Cancel">
                             Don't Delete
                         </button>
